k8s/ingress/ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wellness-ingress
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - wellness.local
      secretName: tls-secret

  rules:
    - host: wellness.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service   # 👈 ESTE
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service   # 👈 ESTE
                port:
                  number: 3000
